add note on using jupyter on GPU notebook about choosing a kernel

--- a/docs/tutorials/jupyter_gpu.ipynb
+++ b/docs/tutorials/jupyter_gpu.ipynb
@@ -6,6 +6,9 @@
    "metadata": {},
    "source": [
     "# Using Jupyter on GPU\n",
+    "\n",
+    "* If the import of tensorflow fails, then make sure that you have chosen the appropriate jupyter kernel.\n",
+    "\n",
     "### Import modules and check versions"
    ]
   },
